app/assets/stylesheets/pages/_restaurant_show.scss
#restaurants_show {
  z-index: 9;
  h1 {
    text-shadow: 0 0 3px rgba(0, 0, 0, 1);
  }
  h2 {
    font-size: 26px;
    border-bottom: 1px solid $gray-lighter;
    padding-bottom: 10px;
    margin-top: 10px;
  }

  #basic_infos {
    padding: 20px 20px 30px 20px;
    background: #FFF;
    h3 {
      margin-top: 10px;
    }
    .subway {
      color: #14489E;
      padding-top: 10px;
      .subway-icon {
        background: image-url('subway.svg') bottom no-repeat;
        height:16px;
        width: 16px;
        display: inline-block;
        margin-right: 5px;
      }
    }
    p {
      margin: 0;
    }
  }

  .restaurant-interactions {
    background-color: #333;
    padding: 20px;
    a {
      margin: 10px 0;
      background-color: #555;
      border-color: #555;
    }
    a:hover {
      background-color: #4F4F4F;
      border-color: #4F4F4F;
    }
  }

  .contact-restaurant {
    padding: 20px;
    background: #F2F2F2;
    p {
      float: left;
      margin: 0;
      padding: 10px 0;
    }
    .btn {
      float: right;
      margin: 0;
      border-radius: 30px;
      padding: 10px 20px;
    }
  }

  .title {
    padding-top: 10px;
    padding-bottom: 10px;
    color: $gray-darker;
    font-size: 20px;
    font-weight: 400;
    text-align: center;
  }
  .border {
    border-top: 1px solid #f0efef;
    padding-top: 30px;
  }

  .title-label {
    font-size: 15px;
    padding-top: 5px;
    color: #AAA;
    text-align: center;
    padding-bottom: 10px;
  }

  .block-new-1 {
    width: 90px;
    margin: auto;
  }
  .block-new-2 {
    width: 180px;
    margin: auto;
  }
  .block-new-3 {
    width: 240px;
    margin: auto;
  }

  #ambiences {
    background: #FFF;
    position: relative;
    padding: 20px;
  }

  #strengths {
    position: relative;
    background: #F2F2F2;
    padding: 20px;
    .bloc-new {
      width: 240px;
      margin: auto;
    }
  }

  .icon-and-label {
    float: left;
    width: auto;
    padding: 0 10px;
  }

  #image_field {
    height: 300px;
    #text-left {
      bottom: 20px;
    }
  }

  #ambiences {
    background-color: #FFF;
    position: relative;
    padding: 20px;
  }
  #strengths {
    background-color: #F2F2F2;
    position: relative;
    padding-bottom: 20px;
  }
  #mots_de_la_fin {
    background-color: #FFF;
    padding-bottom: 10px;
    position: relative;
    padding: 20px 0;
    img{
      margin-right: auto;
      margin-left: auto;
    }
    .slick-slide {
      p {
        margin: 0;
      }
    }
    p {
      padding-top: 10px;
    }
  }
  .icon {
    height:80px;
    margin-bottom: 0px;
  }
  .avatar {
    margin: 0;
    width: 60px !important;
    height: 60px !important;
  }

  .wrap {
    margin-bottom: 0px;
  }
  .carousel {
    margin-bottom: 10px;
  }
  i {
    padding-top: 10px;
    color: $green;
  }
  .friends-show {
    padding-bottom: 10px;
  }

  .btn {
    margin-bottom: 30px;
  }

  .img-friend-ambiences {
    transition: opacity 0.3s ease;
      &.hidden-friend {
      height: 0;
      overflow: hidden;
      opacity: 0;
    }
  }


  .end-word {
   .end-word-people {
      padding: 10px 0 10px 0;
      width: 250px;
      margin: auto;
      // .end-word-people-side {
      //   float: left;
      //   padding: 10px 7px;
      //   height: 80px;
      //   width: 74px;
      // }
      // .end-word-people-center {
      //   float: left;
      //   padding: 0 10px;
      //   height: 80px;
      //   width: 100px;
      // }
    }
  }
  .end-word-quote {
    float: none;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 20px;
    padding: 10px;
    background-color: #F2F2F2;
    border-radius: 5px;
    position: relative;
    .end-quote-arrow {
      background-color: #F2F2F2;
      height: 15px;
      width: 15px;
      position: absolute;
      top: -7.5px;
      left: calc(50% - 3.5px);
      transform: rotate(45deg);
    }
    .end-quote-name {
      width: 100%;
      display: block;
      font-size: 12px;
      padding-top: 5px;
      color: #AAA;
    }
  }
  .end-word-button {
    float: none;
    width: 100%;
    margin: 0 auto 10px auto;
    background-color: #B3B3B3;
    display: block;
    border-radius: 30px;
    padding: 10px 20px;
    color: white;
    border: 1px solid #A8A8A8;
    text-decoration: none;
  }
  .end-word-button:hover {
    background-color: #A8A8A8;
  }

  #map {
    height: 150px !important;
    .gm-style-cc {
      display: none !important;
    }
  }

  #resto-wishlist {
    padding: 20px 0;
    width: auto;
    margin: auto;
    .resto-wishlist-people {
      width:  240px;
      padding: 0 0 15px 0;
      margin: auto;
    }
  }

}

